# arb-sentinel

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/agents/: spec-auditor.md
.claude/commands/: verify.md
.github/workflows/: ci.yml
docs/adr/: 0001-introduce-claude-code.md
docs/design/: arbitrage-math.md  journal.md  notification.md  odds-api-integration.md  phantom-filtering.md  tournament-selection.md
examples/: 001_modeling_poc.py  002_arbitrage_detection_poc.py  003_live_odds_poc.py  004_discord_webhook_poc.py  README.md
src/arb_sentinel/: __init__.py  arbitrage.py  journal.py  models.py  notification.py  odds_api.py  phantom_filtering.py
tests/: test_arbitrage.py  test_journal.py  test_notification.py  test_odds_api.py  test_phantom_filtering.py  test_smoke.py  test_tournament_selection.py
tests/fixtures/: README.md  odds_api_event_sample.json  odds_api_sports_sample.json
