[project]
name = "arb-sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shollet", email = "shayanhollet@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.40.1",
    "pydantic>=2.13.4",
]

[project.scripts]
arb-sentinel = "arb_sentinel:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
