[project]
name = "arb-sentinel"
version = "0.1.0"
description = "A sport-agnostic, AI-augmented arbitrage detection platform. Paper-traded, observable, built incrementally."
readme = "README.md"
authors = [
    { name = "shollet", email = "shayanhollet@hotmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
keywords = ["arbitrage", "sports-betting", "trading", "ai-agents", "fintech", "observability"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.40.1",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/shollet/arb-sentinel"
Repository = "https://github.com/shollet/arb-sentinel"
Issues = "https://github.com/shollet/arb-sentinel/issues"

[project.scripts]
arb-sentinel = "arb_sentinel:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "SIM",
    "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
